# polis_2

./: .gitignore  README.md  agent_orchestrator.py  log_parser.py  pyproject.toml  reset.py  sandbox.py  server.py  std_err.txt  std_out.txt  test_db.json
libs/: agent.py  agent_database.py  agent_orchestrator.py  app_manager.py  code_isolation.py  code_isolation_test.py  common.py  forum.py  forum_test.py  get_directory_structure.py  quest_manager.py  quest_manager_test.py  rag_repo.py  wikisearch.py
tools/: admin_agent.py  code_isolation.py  file_manager.py  forum.py  long_term_memory.py  notes.py  persona.py  quest_manager.py  rag_repo.py  user_directory.py  wikisearch.py
web/: index.html  index_old.html  messaging.html  quests.html  styles.css
