[project]
name = "polis-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ollama (>=0.4.7,<0.5.0)",
    "markitdown (>=0.0.1a4,<0.0.2)",
    "semchunk (>=3.1.1,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
